# tx-stream

./: .env.example  .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  deploy.sh  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
apidoc/: README.md  openapi.yaml  swagger.json
data/: READEME.md
flows/: health_check.py  historical_scan.py  tx_scan_deployer.py  tx_scanner.py
flows/indexer/: etherscan.py  event_decoder.py  event_parser.py  scanner.py  store.py  utils.py
indexer/: etherscan.py  event_decoder.py  scanner.py  store.py  utils.py
infra/: docker-compose.yaml
migrations/: init.sql
tests/: test_tx_scan_deployer.py  test_tx_scanner.py
tests/indexer/: test_etherscan.py  test_event_parser.py  test_scanner.py  test_store.py  test_utils.py
