[project]
name = "tx-indexer"
version = "0.0.1"
description = "Index transactions event log from evm compatible blockchains"
dependencies = [
"python-decouple >= 3.8, < 4",
"prefect >= 2.10.13, < 3",
"postgrest >= 0.10.6 , < 1",
] 

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
pythonpath = [
  ".", "flows"
]